--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,6 +9,40 @@
 	<li><a href="/movies">View all movies</a></li>
 	<li><a href="/users">View all users</a></li>
 </ul>
+{% if session['show_form'] %}
+
+<h2>Create an Account</h2>
+<form action="/users" method="POST">
+	<p>
+		Email <input type="text" name="email">
+	</p>
+
+	<p>
+		Password <input type="password" name="password">
+    </p>
+
+    <p>
+    	<input type="submit">
+    </p>
+</form>
+{% endif %}
+{% if session['show_login'] %}
+
+<h2>Log In</h2>
+<form action="/login" method="POST" id="login">
+	<p>
+		Email <input type="text" name="email">
+	</p>
+
+	<p>
+		Password <input type="password" name="password">
+    </p>
+
+    <p>
+    	<input type="submit">
+    </p>
+</form>
+{% endif %}
 {% endblock %}
 
 
