--- a/templates/movie_details.html
+++ b/templates/movie_details.html
@@ -9,5 +9,28 @@
   {{ movie.overview }}
 </p>
 
+
+
 <img src="{{ movie.poster_path }}">
+<div id="rating">
+	{% if session['show_form'] %}
+		<h2>Rate this movie</h2>
+		<form action="/movies/{{movie.movie_id}}" methods="POST">
+			<label>Score</label>
+			<select name="score">
+				<option value=1>1</option>
+				<option value=2>2</option>
+				<option value=3>4</option>
+				<option value=4>4</option>
+				<option value=5>5</option>
+			</select>
+			<input type="submit">
+
+		</form>
+
+
+	{% endif %}
+
+
+</div>
 {% endblock %}
